--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -1,31 +1,31 @@
-li {
-    list-style-type: none;
-}
+// li {
+//     list-style-type: none;
+// }
 
-#links {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    gap: 3vw;
-    padding-right: 2vw;
+// #links {
+//     display: flex;
+//     justify-content: right;
+//     align-items: center;
+//     gap: 3vw;
+//     padding-right: 2vw;
 
-}
+// }
 
-#contact {
-    color: #FFFCF6;
-    background-color: #76697B;
-    font-size: 20px;
-    padding: 5px;
-}
+// #contact {
+//     color: #FFFCF6;
+//     background-color: #76697B;
+//     font-size: 20px;
+//     padding: 5px;
+// }
 
-#hej {
-    color: #FFFCF6;
-    text-decoration: none;
-}
+// #hej {
+//     color: #FFFCF6;
+//     text-decoration: none;
+// }
 
-.navLink {
-    text-decoration: none;
-    color: #76697B;
-    display: flex;
-    justify-content: center;
-}
+// .navLink {
+//     text-decoration: none;
+//     color: #76697B;
+//     display: flex;
+//     justify-content: center;
+// }
