--- a/src/scss/newnavbar.scss
+++ b/src/scss/newnavbar.scss
@@ -44,10 +44,12 @@ li {
 }
 
 #contact {
-    color: #FFFCF6;
     background-color: #76697B;
+    width: fit-content;
     font-size: 20px;
     padding: 5px;
+    color: #FFFCF6;
+    text-decoration: none;
 }
 
 #hej {
