--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -33,6 +33,7 @@ article {
     color: #76697B;
     .about-title {
         font-weight: normal;
+        font-size: 3rem;
     }
     .about-text {
         display: flex;
