--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -1,26 +1,21 @@
-// <section className="section-container">
-// <h3>CV</h3>
-// <p id="section-text">
-//   I'm a frontend developer with a passion for creating beautiful and
-//   functional web interfaces. I believe that the best web interfaces are
-//   not only functional but also aesthetically pleasing. That's why I
-//   approach my work with an artist's eye.
-// </p>
-// <div id="contact">
-//   <Link id="hej" to="/about">
-//     Learn More
-//   </Link>
-// </div>
-// </section>
+@import '_mixins.scss';
 
 .container {
     display: flex;
+
+    @include mobile {
+        display: flex;
+        flex-direction: column;
+    }
 
 
 .image-container {
     img {
         width: 40vw;
         height: auto;
+        @include mobile {
+            width: 100vw;
+        }
     }
 }
 
@@ -31,6 +26,11 @@ section {
     width: 60vw;
     color: #76697B;
     padding: 100px;
+
+    @include mobile {
+        width: auto;
+    }
+    
 
     
 
