--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -1,5 +1,9 @@
 @import '_mixins.scss';
 
+header {
+    background-color: #E3DCEF;
+    padding: 30px;
+}
 
 #links {
     display: flex;
@@ -32,13 +36,6 @@
         text-decoration: none;
     }
 }
-
-    @include desktop {
-        #links {
-          display: flex;
-          flex-direction: row;
-        }
-      }
 }
 
 .mobile-navigation {
@@ -46,12 +43,14 @@
 }
 
 @include mobile {
+
     .navigation {
         display: none;
     }
     .mobile-navigation {
         display: flex;
         align-items: center;
+        padding: 2px;
     }
     .hamburger {
         position: absolute;
@@ -59,5 +58,20 @@
         cursor: pointer;
     }
 
-}
+    #links {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 64px;
+        border-top: 1.5px solid #FFFCF6;
+        border-bottom: 1.5px solid #FFFCF6;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        right: 0;
+        width: 100%;
+        background: rgba(239, 220, 235, 0.5);
+
+    }
+
+} 
 
