--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -12,7 +12,7 @@
 .image-container {
     img {
         width: 40vw;
-        height: auto;
+        height: 100%;
         @include mobile {
             width: 100vw;
         }
