changed mixins structure

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -11,7 +11,7 @@
   }
 
   @mixin mobile {
-    @media screen and (max-width: 500px) {
+    @media screen and (min-width: 500px) {
         @content;
       }
   }
