--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -3,19 +3,23 @@
 .container {
     display: flex;
     flex-direction: column;
-
+    overflow: hidden;
+    
     @include desktop {
         display: flex;
         flex-direction: row;
         width: 100%;
+        height: auto;
     }
+
 
 
 .image-container {
     img {
         width: 100vw;
-        @include tablet {
+        @include desktop {
             width: 40vw;
+            height: auto;
         }
     }
 }
@@ -25,20 +29,19 @@ section {
     flex-direction: column;
     justify-content: center;
     width: auto;
+    height: 80vw;
     color: #76697B;
-    padding: 10vw;
+    padding: 20px;
 
-    @include tablet {
+    @include desktop {
         width: 60vw;
+        height: auto;
+        padding: 0 80px;
+        flex-direction: column;
     }
 
-    h3 {
-        font-size: 3rem;
-        font-weight: normal;
-    }
     #section-text {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding:  30px 0;
     }
 }
 
