Updated styling varibles

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -6,17 +6,9 @@ header {
 }
 
 #contact {
-    background-color: #76697B;
-    width: fit-content;
-    font-size: 18px;
-    padding: 7px 10px;
-    border-radius: 5px;
-    color: #FFFCF6;
-    text-decoration: none;
- 
-
+  
 #footerLink {
-    color: #FFFCF6;
+    color: #76697B;
     text-decoration: none;
 }
 }
