--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -9,6 +9,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 70px 10px 30px; 
+   
+    @include tablet {
+        padding: 15px 80px; 
+    }
+
+    @include desktop {
+        padding: 20px 100px; 
+    }
 }
 
 main {
