--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -55,7 +55,17 @@ li {
     display: flex;
     justify-content: center;
     transition: color 0.3s ease;
+    position: relative;
 }
+
+.navLink.active::after {
+    content: ""; 
+    position: absolute; 
+    bottom: -6px; 
+    left: 0;
+    width: 100%; 
+    border-bottom: 2px solid #76697B; 
+  }
 
 
 @include tablet {
