--- a/src/scss/selectLanguage.scss
+++ b/src/scss/selectLanguage.scss
@@ -19,6 +19,7 @@
     align-items: center;
 
     .dropdown-text {
+      color: #76697B;
         padding-right: 5px;
         text-align: center;
     }
