--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -62,7 +62,7 @@ li {
 }
 
 
-.navLink.active::after {
+.navLink.active:after {
     content: ""; 
     position: absolute; 
     bottom: 5px; 
@@ -75,11 +75,12 @@ li {
 
 
 @include tablet {
-.navLink.active::after {
+.navLink.active:after {
     content: ""; 
     position: absolute; 
     bottom: -6px; 
     left: 0;
+    transform: translateX(0%);
     width: 100%; 
     border-bottom: 2px solid #76697B; 
   }
