--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -43,6 +43,7 @@ main {
     }
     .header-title {
         font-weight: normal;
+        color: #76697B;
         font-size: 2.5em;
         padding-bottom: 8px;
 
