--- a/src/scss/galleryPage.scss
+++ b/src/scss/galleryPage.scss
@@ -3,23 +3,39 @@
 
 .gallery-container {
     background-color: #FFFCF6;
+    height: 100%;
 
 .gallery-header {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 9vh 0 5vh 0;
+
+    @include desktop {
+        padding: 9vh 0 5vh 0;
+    }
+
+    .gallery-subheading {
+        color: #76697B;
+        padding-top: 5px;
+     
+        @include desktop {
+            font-size: 2em;
+        }
+    }
 }
+
+
 
 
 .projects-container {
     display: flex;
     justify-content: center;
-    margin-bottom: 4vh;
+    padding-bottom: 4vh;
 
     @include desktop {
         justify-content: space-around;
-        margin-bottom: 10vh; 
+        padding-bottom: 10vh; 
     }
 
 
@@ -41,10 +57,33 @@
    
 
     @include desktop {
-        flex-direction: row;
         width: 25vw;
         height: 35vw;
-        margin: 30px;
+        margin: 2vh;
+    }
+
+    .box-container {
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+    }
+
+    .box-image {
+        background-color: #76697B;
+        width: 100%;
+        height: 27vh;
+    }
+
+    .box-title {
+        color: #76697B;
+        padding: 4vh 0 2vh 0; 
+        font-size: 3em;
+        font-weight: normal;
+    }
+
+    .box-text {
+        color: #76697B;
+        font-size: 1.5em;
     }
   }
 }
