--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -40,7 +40,7 @@ footer {
                 padding: 20px;
             }
         } 
-        @include tablet {
+        @include desktop {
             justify-content: left;
         }  
     }
@@ -57,7 +57,7 @@ footer {
         display: none;
       }
 
-      @include tablet {
+      @include desktop {
         .tablet-and-above {
           display: block;
         }
@@ -75,12 +75,6 @@ footer {
     align-self: center;
     width: 40px;
     height: 40px;
-   
-   
-    @include tablet {
-        width: 60px;
-        height: 60px;
-     }
 
      @include desktop {
         width: 130px;
@@ -116,7 +110,7 @@ footer {
       }
 
       .footer-socials a {
-        @include tablet {
+        @include desktop {
         margin: 90px 10px;
         }
       }
