--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -4,7 +4,7 @@ footer {
     background-color: #76697B;
 
     .footer-content-container {
-        @include tablet {
+        @include desktop {
             display: flex;
 
         }
@@ -15,6 +15,7 @@ footer {
         padding: 40px;
         display: flex;
         justify-content: center;
+ 
         a {
             display: flex;
             margin: 1vw;
@@ -37,11 +38,13 @@ footer {
             }
 
             @include tablet {
-                padding: 20px;
+                padding: 20px;  
             }
         } 
+
         @include desktop {
             justify-content: left;
+            margin-left: 10vw;
         }  
     }
 
@@ -49,8 +52,12 @@ footer {
         display: flex;
         justify-content: center;
         background-color: #5C555F;
-        padding: 15px;
+        padding: 20px;
         color: #AFA7B2;
+
+        @include desktop {
+          padding: 30px;
+      } 
     }
 
     .tablet-and-above {
@@ -64,37 +71,34 @@ footer {
     }   
 
     .figure-container {
-        position: absolute;
-        left: 80px;
-        bottom: -20px;
+        position: relative;
+        left: -21vw;
+        bottom: -170px;
+
  
       }
 
 .figure-img {
-    display: flex;
-    align-self: center;
-    width: 40px;
-    height: 40px;
+  position: absolute;
+    width: 200px;
+    height: 200px;
 
-     @include desktop {
-        width: 130px;
-        height: 130px;
-       
-     }
+   
     }
 
      .quote-container {
-        position: relative;
+        position: absolute;
         display: flex;
         align-items: center;
         flex-direction: column;
+        right: 0;
       }
 
       .quote-title {
         font-size: 27px;
-        margin-left: -2vw;
-        margin-top: 70px;
-        margin-bottom: 15px;
+        margin-left: -5vw;
+        margin-top: 7vh;
+        margin-bottom: 2vh;
         color: white;
       }
       
@@ -103,10 +107,9 @@ footer {
         background-color: white;
         padding: 15px;
         color: #76697B;
-        border-radius: 50px;
+        border-radius: 45px;
         margin-left: 19vw; 
-        margin-right: 5vw; 
-
+        margin-right: 3vw; 
       }
 
       .footer-socials a {
@@ -117,6 +120,8 @@ footer {
       
       .quote-content {
         padding: 10px;
+        width: 36vw;
+        line-height: 24px;
         font-size: 15px;
 
       }
@@ -124,12 +129,11 @@ footer {
       .quote-triangle {
         position: absolute;
         width: 5px;
-        height: 20px;
+        height: 30px;
         border-left: 9px solid transparent;
         border-right: 10px solid transparent;
         border-bottom: 10px solid white;
         bottom: 11px;
-        left: 3px;
+        left: 1px;
       }
-
 }
