--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -44,8 +44,13 @@ header {
 
 .hamburger {
     position: absolute;
-    right: 3%;
+    right: 20px;
     cursor: pointer;
+}
+
+#close {
+    position: absolute;
+    right: 5px;
 }
 
 li {
