--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin desktop-large {
+  @media screen and (min-width: 1400px) {
+    @content;
+  }
+}
+
 @mixin desktop {
     @media screen and (min-width: 1200px) {
       @content;
@@ -8,10 +14,4 @@
     @media screen and (min-width: 800px) {
       @content;
     }
-  }
-
-  @mixin mobile {
-    @media screen and (min-width: 500px) {
-        @content;
-      }
   }
