--- a/src/scss/galleryPage.scss
+++ b/src/scss/galleryPage.scss
@@ -50,28 +50,70 @@
   
   .box {
     background-color: rgb(255, 255, 255);
-    width: 80vw;
-    height: 100vw;
+    width: 700px;
+    height: 900px;
     margin: 4vh 0 0;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-   
+
 
     @include desktop {
-        width: 25vw;
-        height: 35vw;
-        margin: 2vh;
+        width: 350px;
+        height: 500px;
+        margin: 20px;
+    }
+   
+
+    @include desktop-large {
+        width: 400px;
+        height: 550px;
+        margin: 20px;
     }
 
     .box-container {
+        position: relative;
         display: flex;
         flex-direction: column;
-        padding: 30px;
+        padding: 25px;
     }
+
+    .image-container {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+    }
+    
 
     .box-image {
         background-color: #76697B;
         width: 100%;
-        height: 27vh;
+        height: 350px;
+
+        @include desktop {
+            height: 170px;
+        }
+       
+    
+        @include desktop-large {
+            height: 200px;
+        }
+    }
+
+    .left-arrow {
+        position: absolute;
+        top: 50%;
+        left: 1%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        color: #ada9af;
+    }
+
+    .right-arrow {
+        position: absolute;
+        top: 50%;
+        right: 1%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        color: #ada9af;
     }
 
     .box-title {
