--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -56,7 +56,7 @@ main {
     }
     
 article {
-    background-color: #FFFCF6;
+    background-color: #ffffff;
     display: flex;
     align-items: center;
     flex-direction: column;
