--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -69,11 +69,11 @@ article {
     }
     }
 
-    .about-text {
+    .expertise-text {
         display: flex;
         padding: 20px;
         flex-direction: column;
-        .about-1, .about-2 {
+        .expertise-1, .expertise-2, .expertise-3 {
             padding: 20px;
         }
         
