Added to top button

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,9 +2,55 @@
 
 footer {
     background-color: #76697B;
+    position: relative;
+
+    .to-top-container {
+      position: absolute; 
+      top: -34px; 
+      padding: 0px 25px; 
+      right: 60px; 
+      background-color: #E3DCEF;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+
+      .to-top-arrow {
+        color: #76697B;
+        width: 40px;
+        height: 40px;
+        margin-top: -5px;
+        margin-bottom: -5px;
+
+        
+      @include tablet {
+        top: -59px;
+        width: 65px;
+        height: 65px;
+        margin-top: -5px;
+        margin-bottom: -5px;
+      }
+      }
+
+      @include tablet {
+        top: -59px; 
+        padding: 0px 45px;
+        right: 80px; 
+      }
+
+      @include desktop {
+        right: 100px; 
+      }
+
+    }
 
     .footer-content-container {
+      padding: 60px;
+
+      @include tablet {
+        padding: 70px;
+
+    }
         @include desktop {
+          padding: 40px;
             display: flex;
 
         }
@@ -12,7 +58,6 @@ footer {
 
 
     .footer-socials {
-        padding: 40px;
         display: flex;
         justify-content: center;
  
@@ -22,7 +67,7 @@ footer {
             align-items: center;
             justify-content: center;
             padding: 15px;
-            background-color: #FFFCF6;
+            background-color: #ffffff;
             border-radius: 50%;
             color: #5C555F;
             font-size: 1.7rem;
@@ -35,17 +80,39 @@ footer {
                     width: 30px;
                     height: 30px;
                 }
+
+                @include desktop {
+                  width: 40px;
+                  height: 40px;         
+              }
             }
 
             @include tablet {
                 padding: 20px;  
             }
-        } 
+        }
+        
+        .name-links {
+          @include desktop {
+            margin-top: -70px;
+            margin-bottom: 70px;
+          }
+        }
+
+
 
         @include desktop {
             justify-content: left;
             margin-left: 10vw;
         }  
+
+        .div-links {
+          display: flex;
+          align-items: center;
+          color: #ffffff;
+          flex-direction: column;
+
+        }
     }
 
     .copyright {
@@ -73,7 +140,7 @@ footer {
     .figure-container {
         position: relative;
         left: -21vw;
-        bottom: -170px;
+        bottom: -160px;
 
  
       }
