--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -5,7 +5,7 @@
     font-family: "League Spartan";
 }
 
-.home-header {
+#header {
     display: flex;
     justify-content: space-between;
     align-items: center;
