changed spacing between links

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -112,6 +112,8 @@ footer {
           align-items: center;
           color: #ffffff;
           flex-direction: column;
+          margin-left: 5px;
+          margin-right: 5px;
 
         }
     }
