updated position for links and logo

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,3 +1,18 @@
+@import "_mixins.scss";
+
+.logo {
+  width: 70px;
+
+  @include tablet {
+    width: 80px;
+  }
+
+  @include desktop {
+    width: 100px;
+  }
+
+}
+
 .dropdown {
     position: relative;
   }
