--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -26,7 +26,7 @@ header {
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 90px;
+        top: 70px;
         padding: 20px 0;
         right: 0;
         width: 100%;
@@ -106,6 +106,14 @@ li {
         align-items: center;
         gap: 2vw;
         padding-right: 2vw;
+
+        @include tablet {
+            margin-left: -30px;
+        }
+
+        @include desktop {
+            margin-left: -50px;
+        }
     }
 }
 } 
