--- a/src/scss/galleryPage.scss
+++ b/src/scss/galleryPage.scss
@@ -88,14 +88,6 @@
     padding-bottom: 10vh;
   }
 
-  // .hovered {
-  //   transform: scale(1.05);
-  // }
-
-  // .box:hover .box-container {
-  //   transform: scale(1.05);
-  // }
-
   .box-container {
     display: flex;
     flex-direction: column;
@@ -139,7 +131,7 @@
 
     .image-container {
       position: relative;
-      display: inline-block;
+      overflow: hidden;
       width: 100%;
     }
 
@@ -149,6 +141,7 @@
       height: 290px;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
+      transition: transform 0.3s ease-in-out;
 
       @include desktop {
         height: 210px;
@@ -183,13 +176,36 @@
       .category-bubble {
         background-color: #9E8BA6;
         color: #ffffff;
-        padding: 10px 12px;
+        padding: 10px 15px;
         margin-bottom: -10px;
         border-radius: 30px;
-        font-size: 0.8em;
+        font-size: 0.7em;
         display: inline-block;
       }
      }
    }
+
+   .box-text-overlay {
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: rgba(189, 170, 220, 0.7);
+    transition: top 0.3s ease-in-out;
+    color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
  }
+
+ .box-content.hovered .box-text-overlay {
+  top: 0;
+}
 }
