--- a/src/scss/galleryPage.scss
+++ b/src/scss/galleryPage.scss
@@ -133,6 +133,8 @@
       position: relative;
       overflow: hidden;
       width: 100%;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
     }
 
     .box-image {
