--- a/src/scss/galleryPage.scss
+++ b/src/scss/galleryPage.scss
@@ -39,22 +39,28 @@
   }
 
   .filter-container {
-    margin: 30px 0;
+    margin: 30px 5px;
     background-color: #E3DCEF;
     text-align: center;
     padding: 15px;
     border-radius: 40px;
 
+
     .filter-button {
-      margin: 0 10px;
-      padding: 10px 20px;
+      margin: 0 2px;
+      padding: 7px 10px;
       background-color: #E3DCEF;
       border: none;
       cursor: pointer;
       border-radius: 10px;
       transition: background-color 0.3s;
-      font-size: 1.5em;
+      font-size: 1em;
       color: #76697B;
+
+      @include tablet {
+        padding: 10px 20px;
+        margin: 0 10px;
+      }
 
       &.active {
         background-color: #76697B;
@@ -104,9 +110,9 @@
   .box {
     background-color: #ffffff;
     border-radius: 10px;
-    width: 500px;
+    width: 65vw;
     height: auto;
-    margin: 20px;
+    margin: 30px;
     box-shadow: rgba(61, 59, 59, 0.2) 0px 0px 10px;
 
     @include desktop {
@@ -140,18 +146,10 @@
     .box-image {
       background-color: #76697B;
       width: 100%;
-      height: 290px;
+      height: auto;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       transition: transform 0.3s ease-in-out;
-
-      @include desktop {
-        height: 210px;
-      }
-
-      @include desktop-large {
-        height: 230px;
-      }
     }
 
     .box-text-container {
@@ -179,7 +177,7 @@
         background-color: #9E8BA6;
         color: #ffffff;
         padding: 10px 15px;
-        margin-bottom: -10px;
+        margin-bottom: 5px;
         border-radius: 30px;
         font-size: 0.7em;
         display: inline-block;
@@ -192,7 +190,7 @@
     top: -100%;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 98.5%;
     display: flex;
     align-items: center;
     justify-content: center;
