--- a/src/scss/galleryPage.scss
+++ b/src/scss/galleryPage.scss
@@ -22,10 +22,14 @@
 .gallery-container {
   background-color: #ffffff;
   border-radius: 10px;
-  margin: 80px 0;
+  margin: 30px 0 50px;
   width: 85vw;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  @include tablet {
+    margin: 80px 0;
+  }
 }
 
 .gallery-header {
