--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -10,7 +10,7 @@ header {
 #footerLink {
     color: #76697B;
     text-decoration: none;
-}
+  }
 }
 
 .navigation {
@@ -80,13 +80,26 @@ li {
 
 @include tablet {
 .navLink.active:after {
-    content: ""; 
-    position: absolute; 
-    bottom: -6px; 
-    left: 0;
-    transform: translateX(0%);
-    width: 100%; 
-    border-bottom: 2px solid #76697B;
+    content: "";
+    position: absolute;
+    display: flex;
+    bottom: -9px; 
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100%); 
+    padding: 5px 15px;
+    height: 30px; 
+    background-color: #ffffff; 
+    border-radius: 30px; 
+    border-bottom: 0px; 
+
+    @include desktop {
+    bottom: -8px; 
+    }
+  }
+
+  .navText {
+    z-index: 1;
   }
 }
 
@@ -107,10 +120,12 @@ li {
 
         @include tablet {
             margin-left: -30px;
+            gap: 30px;
         }
 
         @include desktop {
             margin-left: -50px;
+            gap: 40px;
         }
       }
    }
